# email-generation-assistant

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  main.py  pyproject.toml  requirements.in  requirements.txt  run_streamlit.sh  streamlit_app.py
.streamlit/: config.toml
data/: reference_emails.json  test_scenarios.json
data/results/: FINAL_ASSESSMENT_REPORT.html  FINAL_ASSESSMENT_REPORT.md
src/: config.py  email_generator.py  report_generator.py
src/evaluation/: evaluator.py  metrics.py
src/utils/: helpers.py
tests/: test_email_generator.py  test_metrics.py
